# hem

./: .gitattributes  .gitignore  0. 최우선_확인파일.md  2026-07-08.md  AGENTS.md  CLAUDE.md  CLAUDE.md.stale-1783571465  CLAUDE.md.stale-1784186208  LLM위키_홈.md  START-HERE.md  러너앱_실행.bat  클로드 꽃집 ai.md  클로드 정부지원사업 ai.md
.obsidian/: community-plugins.json  graph.json  (+1 more)
1. Projects/클로드 정부지원사업 ai/jbjw-main/jbjw-main/hyemi-ai-factory/: AGENTS.md  AI_MODES.md  APP_ARCHITECTURE.md  APP_USAGE.md  CLAUDE.md  DECISIONS.md  FACTORY_DESIGN.md  HANDOFF.md  KNOWN_LIMITATIONS.md  LOCAL_RUN_GUIDE.md  MEMORY.md  MOBILE_CHECK.md  NEXT_ROADMAP.md  PLAN.md  README.md  TEST_REPORT.md  pyproject.toml
1. Projects/클로드 정부지원사업 ai/jbjw-main/jbjw-main/hyemi-ai-factory/00_rules/: budget_alignment_checklist.md  danger_words.md  evaluation_rubric.md  evidence_checklist.md  final_review_checklist.md  lock_rules.md  presentation_attack_questions.md  replacement_words.md
1. Projects/클로드 정부지원사업 ai/jbjw-main/jbjw-main/hyemi-ai-factory/01_inputs/: input_form.md
1. Projects/클로드 정부지원사업 ai/jbjw-main/jbjw-main/hyemi-ai-factory/02_workflows/: automation_item_workflow.md  content_workflow.md  factory_orchestrator_workflow.md  grant_workflow.md  presentation_workflow.md  qna_workflow.md
1. Projects/클로드 정부지원사업 ai/jbjw-main/jbjw-main/hyemi-ai-factory/03_templates/: applicant_risk_check_template.md  final_judge_review_template.md  idea_comparison_template.md  next_step_prompt_template.md  notice_summary_template.md  revision_order_template.md  scoring_strategy_template.md  selected_idea_lock_template.md
(+1180 files in other folders)
