[project]
name = "hyemi-grant-factory"
version = "0.1.0"
description = "혜미식 AI 작업 공장 — 정부지원사업 공고 분석·아이디어 LOCK CLI (파일 입출력 기반, 외부 의존성 없음)"
requires-python = ">=3.9"
# 원칙: v1은 표준 라이브러리만 사용한다. AI API 연동은 후속 확장(TODO_CLI.md #1)에서
# optional-dependencies로 분리한다. 의존성을 추가하려면 DECISIONS.md에 기록할 것.
dependencies = []

[project.optional-dependencies]
# 후속 확장용 자리 (설치하지 말 것 — TODO_CLI.md 참조)
# ai = ["anthropic"]

[tool.setuptools]
# 패키지가 아니라 스크립트 모음이다. 실행은 저장소 루트에서:
#   python 08_factory_tools/create_project.py <name>
#   python 08_factory_tools/run_factory.py <name> --step all
py-modules = []
